refactor: Affix -> DamageRule